--- a/api/composer.json
+++ b/api/composer.json
@@ -12,7 +12,8 @@
         "symfony/flex": "^1.1",
         "symfony/framework-bundle": "4.3.*",
         "symfony/mercure-bundle": "*",
-        "symfony/yaml": "4.3.*"
+        "symfony/yaml": "4.3.*",
+        "webonyx/graphql-php": "^0.13.6"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
