--- a/api/composer.json
+++ b/api/composer.json
@@ -6,7 +6,9 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
+        "fzaninotto/faker": "^1.8",
         "guzzlehttp/guzzle": "^6.3",
+        "hautelook/alice-bundle": "^2.5",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.1",
